--- a/kube-config-internal.yaml
+++ b/kube-config-internal.yaml
@@ -16,7 +16,14 @@ spec:
         app: events-data
     spec:
       containers:
-      - name: events-data
+      - name: mysql-hibernate
+        image: mysql:5.6
+        env:
+            MYSQL_ROOT_PASSWORD: password
+            MYSQL_DATABASE: test
+            MYSQL_USER: sa
+            MYSQL_PASSWORD: password
+      - name: spring-boot-mysql-hibernate
         image: gcr.io/myproject-278611/spring-boot-mysql-hibernate:V_16
         ports:
         - containerPort: 8082
