--- a/kube-config-internal.yaml
+++ b/kube-config-internal.yaml
@@ -18,7 +18,7 @@ spec:
       containers:
       - name: mysql-hibernate
         image: mysql:5.6
-        env:
+        environment:
             MYSQL_ROOT_PASSWORD: password
             MYSQL_DATABASE: test
             MYSQL_USER: sa
