--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ server.port = 8082
 spring.thymeleaf.cache = false
 
 # Database
+spring.jpa.database=mysql
 db.driver = com.mysql.jdbc.Driver
 db.url = jdbc:mysql://mysql-hibernate:3306/test
 db.username = sa
