--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -15,3 +15,6 @@ hibernate.dialect = org.hibernate.dialect.MySQL5Dialect
 hibernate.show_sql = true
 hibernate.hbm2ddl.auto = create
 entitymanager.packagesToScan = netgloo
+spring.datasource.testWhileIdle = true
+spring.datasource.timeBetweenEvictionRunsMillis = 60000
+spring.datasource.validationQuery = SELECT 1
