--- a/kube-config-mysql.yaml
+++ b/kube-config-mysql.yaml
@@ -1,3 +1,4 @@
+---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -5,7 +6,7 @@ metadata:
   labels:
     app: mysql
 spec:
-  replicas: 1
+  replicas: 2
   selector:
     matchLabels:
       app: mysql
@@ -15,39 +16,41 @@ spec:
         app: mysql
     spec:
       containers:
-        - image: mysql:5.6
-          name: mysql-hibernate
-          args:
-            - "--default-authentication-plugin=mysql_native_password"
-          env:
-            - name: MYSQL_ROOT_PASSWORD
-              value: "password"
-            - name: MYSQL_DATABASE
-              value: "test"
-            - name: MYSQL_USER
-              value: "sa"
-            - name: MYSQL_PASSWORD
-              value: "password"
-          ports:
-            - containerPort: 3306
-              name: mysql
-          volumeMounts:
-            - name: mysql-persistent-storage
-              mountPath: /var/lib/mysql
-      volumes:
+      - name: mysql-hibernate
+        image: mysql:5.6
+		    env:
+        - name: MYSQL_ROOT_PASSWORD
+          value: "password"
+        - name: MYSQL_DATABASE
+          value: "test"
+        - name: MYSQL_USER
+          value: "sa"
+        - name: MYSQL_PASSWORD
+          value: "password"
+        ports:
+        - containerPort: 3306
+          name: "mysql-port"
+		    volumeMounts:
         - name: mysql-persistent-storage
-          persistentVolumeClaim:
-            claimName: mysql-volumeclaim
+          mountPath: /var/lib/mysql
+        
+        livenessProbe:
+          httpGet:
+            path: /
+            port: 3306
+          initialDelaySeconds: 60
+          periodSeconds: 60
+
+---
 apiVersion: v1
 kind: Service
-metadata:
-  name: mysql
-spec:
-  #type: NodePort
-  ports:
-  - port: 3306
-    #targetPort: 3306
-    #nodePort: 31000
-  selector:
+metadata: 
+  name: mysql-service
+spec: 
+  ports: 
+     -  port: 3306
+        protocol: TCP
+        targetPort: 3306
+  selector: 
     app: mysql
-  clusterIP: None
+  type: ClusterIP
