--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.thymeleaf.cache = false
 
 # Database
 db.driver = com.mysql.jdbc.Driver
-db.url = jdbc:mysql://mysql:3306/test
+db.url = jdbc:mysql://mysql-service:3306/test
 db.username = sa
 db.password = password
 
