--- a/kube-config-mysql.yaml
+++ b/kube-config-mysql.yaml
@@ -30,6 +30,13 @@ spec:
         ports:
         - containerPort: 3306
           name: "mysql-port"
+        volumeMounts:
+        - name: mysql-persistent-storage
+          mountPath: /var/lib/mysql
+      volumes:
+      - name: mysql-persistent-storage
+        persistentVolumeClaim:
+          claimName: mysql-pv-claim
                 
         livenessProbe:
           httpGet:
@@ -37,6 +44,19 @@ spec:
             port: 3306
           initialDelaySeconds: 60
           periodSeconds: 60
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: mysql-pv-claim
+  labels:
+    app: mysql
+spec:
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 20Gi
 
 ---
 apiVersion: v1
