--- a/kube-config-mysql.yaml
+++ b/kube-config-mysql.yaml
@@ -38,15 +38,29 @@ spec:
           #periodSeconds: 60
           
         volumeMounts:
-        - name: mysql-persistent-storage
-          mountPath: /var/lib/mysql
+        # - name: mysql-persistent-storage
+          # mountPath: /var/lib/mysql
+        - name: mysql-initdb
+          mountPath: /docker-entrypoint-initdb.d
       volumes:
-      - name: mysql-persistent-storage
-        persistentVolumeClaim:
-          claimName: mysql-pv-claim
+      #- name: mysql-persistent-storage
+        #persistentVolumeClaim:
+          #claimName: mysql-pv-claim
+      - name: mysql-initdb
+        configMap:
+          name: mysql-initdb-config
                 
       
 ---
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: mysql-initdb-config
+data:
+  initdb.sql: |
+    CREATE TABLE test.users (id BIGINT NOT NULL AUTO_INCREMENT, email  varchar(50), name varchar(20), PRIMARY KEY (id));
+---
+
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
